name:                emacs-haskell-deps
version:             0.1.0.3
synopsis:            Please see README.md
description:         Please see README.md
homepage:            https://github.com/TimothyKlim/emacs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Timothy Klim <hackage@timothyklim.com>
maintainer:          Timothy Klim <hackage@timothyklim.com>
copyright:           Timothy Klim <hackage@timothyklim.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
extra-doc-files:     README.md

executable           emacs-haskell
  ghc-options:       -W
  default-language:  Haskell2010
  main-is:           Main.hs
  build-depends:     base >= 4.3 && < 5
                   , ghc-mod
